# efm-api-node-state

./: Cargo.toml  README.md  config.toml
.github/workflows/: main.yml
packaging/rpm/: Makefile  build.sh  docker-compose.yml  efm-api-node-state.spec
packaging/rpm/docker/: Dockerfile.centos7
scripts/: efm_check_primary.sh  efm_check_standby.sh  efm_monitor.sh
src/: main.rs
systemd/: efm-api-node-state.service
